app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap');

body {
  background-image: radial-gradient(
  circle at center -10%,
  hsl(31, 100%, 59%) 5%,
  hsl(346, 69%, 51%) 55%,
  hsl(240deg 100% 20%) 100%
  );
  height: 100vh;
}

.main-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*Navbar*/
nav.navbar{
  color: white;
  background-color: rgb(20, 20, 20, 1);
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
  -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
  box-shadow:0px 0px 26px 0px #1b1b1b ;
  height: 10vh;
}

.nav-link {
  padding: 5px 10px;
  margin: 10px 10px;
}

.nav-link:hover{
  background-color: rgb(206, 30, 65);
  border-radius: 0.5rem;
}

.pixie{
  display: flex;
  font-size: xx-large;
  padding: 10px;
  margin-left: 20px;
}

.navbar-links{
  padding: 13px;
}
/*Login*/

.login{
  display: flex;
  align-items: center;
  justify-content: center;
  user-select: none;
  height: 90vh;
}

.login-left{
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.login .pixie{
  color: white;
  font-size: 10rem;
  flex-grow: 1; 
  align-self: stretch;
  padding: 0;

}

.login .intro{
  color: white;
  text-align: start;
  margin-left: 5vw;
}


.login form{
  color: rgb(240, 240, 240);
  display: flex;
  flex-direction: column;
  background-color: rgb(32, 32, 32, 0.5);
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  justify-content: center;
  align-items: center;
  -webkit-box-shadow:0px 0px 26px 0px #1b1b1b ;
  -moz-box-shadow:0px 0px 26px 0px #1b1b1b ;
  box-shadow:0px 0px 26px 0px #1b1b1b ;

  flex-grow: 1;
  align-self: stretch;

  margin: auto 10vw;
  height: 90vh;
  /*border-radius: 1rem;*/
}

form h1{
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  text-align: center;
  padding-bottom: 1rem;
  font-size: x-large;
  padding-bottom: 0;
}

form h2{
  text-align: center;
  padding-bottom: 1rem;
  font-size: medium;
  padding-bottom: 20px;
}

.login label{
  color: rgb(240, 240, 240);
  display: flex;
  font-weight: 300;
  font-size: 0.8rem;
  padding-left: 0.4em;
  padding-bottom: 0.4em;
}

.login input{
  color: rgb(21, 21, 21);
  display: flex;
  margin-bottom: 1rem;
  border: none;
  border-radius: 0.5rem;
  padding: 0.2rem 0.5rem;
  max-width: 400px;
  font-weight: 300;
}

.form-links{
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.form-link{
  font-size: small;
}

.form-link:hover{
  cursor: pointer;
  color: rgb(255, 114, 114);
}

.login-btn{
  background-color: rgb(230, 230, 230);
  color: black;
  margin-top: 1rem;
  border-radius: 0.5rem;
  padding: 0.3rem 1rem;
}

